--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,10 @@ dependencies = ["sqlalchemy", "paho-mqtt"]
 
 [project.scripts]
 logged = "mqtt_data_logger.log_data:logged"
+
+[tool.setuptools.packages.find]
+# All the following settings are optional:
+where = ["."]                         # ["."] by default
+include = ["mqtt_data_logger*"]       # ["*"] by default
+exclude = ["mqtt_data_logger.tests*"] # empty by default
+namespaces = false                    # true by default
