NEW: add runner

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,4 @@ tests = ["data/*"]
 logged = "mqtt_data_logger.log_data:logged"
 start_session = "mqtt_data_logger.util:start_session" # paramterize to take arbitrary db fp
 initialize_database = "mqtt_data_logger.sensor_data_models:initialize_sensor_data_db"
+run_mqtt_logger = "mqtt_data_logger.__main__:main"
