--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.9"
-dependencies = ["sqlalchemy", "paho-mqtt", "pytest"]
+dependencies = ["sqlalchemy", "paho-mqtt", "pytest", "retry", "icecream"]
 
 [tool.setuptools]
 include-package-data = true
